test/oscar/compiler/errors/funcReturnMismatch.oscar
def add5(int: x) => int = {
	return 6.0;
}

def main() => unit = {
	int y = add5(1));
}